Fix overflow issue on filter bar

--- a/layouts/NDR/NDR.module.scss
+++ b/layouts/NDR/NDR.module.scss
@@ -2,9 +2,15 @@
     border-bottom-right-radius: var(--chakra-sizes-2);
 }
 
+.ndrTabList {
+    display: flex;
+    align-items: center;
+}
+
 .ndrTab {
     color: var(--chakra-colors-red-600);
     color: white;
+    height: 100%;
 
     a {
         width: 100%;
